  * patches/hurd-i386/cvs-libpthread-pthread_condattr_setclock.diff: Fix for
    pthread_condattr_setclock, for glib2.0 build.
  * patches/hurd-i386/cvs-munmap-0.diff: New patch to fix gcc's -fsplit-stack
    initialization.
  * patches/hurd-i386/cvs-tcbhead_t.diff: New patch to complete TLS variables,
    to fix gcc's -fsplit-stack support.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 02 Mar 2014 16:19:49 +0100

eglibc (2.18-4) unstable; urgency=high

  [ Aurelien Jarno ]
  * debian/debhelper.in/libc.preinst: Don't fail if the dynamic loader
    symlink is dangling or missing.  Closes: #740158, #740196.
  * debian/debhelper.in/libc.preinst: only disable ldconfig after making
    sure a fixed version hasn't already been unpacked, as the unpack order
    is not guaranteed.
  * debian/debhelper.in/libc.postrm: generalize the dynamic linker
    symlink creation to all biarch packages.
  * debian/debhelper.in/libc-alt.postrm: generalize the dynamic linker
    symlink removal to all biarch packages.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 02 Mar 2014 15:32:16 +0100

eglibc (2.18-3) unstable; urgency=medium

  * debian/patches/any/local-no-malloc-backtrace.diff: Lower the default
    for MALLOC_CHECK_ to 1, and add it to the list of insecure variables
    that can't be set for suid binaries. This allows us to not backtrace
    malloc failures by default (Closes: #739913, LP: #1266492) and skips
    backtrace for suid binaries where an attacker calling into a corrupt
    malloc internal data structure with malloc could lead to Bad Things.

 -- Adam Conrad <adconrad@0c3.net>  Sun, 23 Feb 2014 18:43:36 -0700

eglibc (2.18-2) unstable; urgency=medium

  [ Aurelien Jarno ]
  * any/local-ldconfig-ignore-ld.so.diff: new patch to ignore the dynamic
    linker in ldconfig.  Closes: #699206, #707185, #727786, #736097,
    #739734, #739758.
  * debian/debhelper.in/libc.preinst: Disable ldconfig when a potentially