@@ -50,7 +50,7 @@ glibc-2.8/debian/patches/hurd-i386/submitted-extern_inline.diff 3057
  
 +struct hurd_fd *_hurd_fd_get (int fd);
 +
-+#if defined __USE_EXTERN_INLINES && defined _LIBC
++#if defined __USE_EXTERN_INLINES && defined _LIBC && !defined NOT_IN_libc
  _HURD_FD_H_EXTERN_INLINE struct hurd_fd *
  _hurd_fd_get (int fd)
  {
@@ -133,7 +133,7 @@ glibc-2.8/debian/patches/hurd-i386/submitted-extern_inline.diff 3057
  
 +void _hurd_port_init (struct hurd_port *port, mach_port_t init);
 +
-+#if defined __USE_EXTERN_INLINES && defined _LIBC
++#if defined __USE_EXTERN_INLINES && defined _LIBC && !defined NOT_IN_libc
  _HURD_PORT_H_EXTERN_INLINE void
  _hurd_port_init (struct hurd_port *port, mach_port_t init)
  {
@@ -153,7 +153,7 @@ glibc-2.8/debian/patches/hurd-i386/submitted-extern_inline.diff 3057
 +_hurd_port_locked_get (struct hurd_port *port,
 +		       struct hurd_userlink *link);
 +
-+#if defined __USE_EXTERN_INLINES && defined _LIBC
++#if defined __USE_EXTERN_INLINES && defined _LIBC && !defined NOT_IN_libc
  _HURD_PORT_H_EXTERN_INLINE mach_port_t
  _hurd_port_locked_get (struct hurd_port *port,
  		       struct hurd_userlink *link)
@@ -169,7 +169,7 @@ glibc-2.8/debian/patches/hurd-i386/submitted-extern_inline.diff 3057
 +_hurd_port_get (struct hurd_port *port,
 +		struct hurd_userlink *link);
 +
-+#if defined __USE_EXTERN_INLINES && defined _LIBC
++#if defined __USE_EXTERN_INLINES && defined _LIBC && !defined NOT_IN_libc
  _HURD_PORT_H_EXTERN_INLINE mach_port_t
  _hurd_port_get (struct hurd_port *port,
  		struct hurd_userlink *link)
@@ -187,7 +187,7 @@ glibc-2.8/debian/patches/hurd-i386/submitted-extern_inline.diff 3057
 +		 struct hurd_userlink *link,
 +		 mach_port_t used_port);
 +
-+#if defined __USE_EXTERN_INLINES && defined _LIBC
++#if defined __USE_EXTERN_INLINES && defined _LIBC && !defined NOT_IN_libc
  _HURD_PORT_H_EXTERN_INLINE void
  _hurd_port_free (struct hurd_port *port,
  		 struct hurd_userlink *link,
@@ -203,7 +203,7 @@ glibc-2.8/debian/patches/hurd-i386/submitted-extern_inline.diff 3057
  
 +void _hurd_port_locked_set (struct hurd_port *port, mach_port_t newport);
 +
-+#if defined __USE_EXTERN_INLINES && defined _LIBC
++#if defined __USE_EXTERN_INLINES && defined _LIBC && !defined NOT_IN_libc
  _HURD_PORT_H_EXTERN_INLINE void
  _hurd_port_locked_set (struct hurd_port *port, mach_port_t newport)
  {
@@ -217,7 +217,7 @@ glibc-2.8/debian/patches/hurd-i386/submitted-extern_inline.diff 3057
  
 +void _hurd_port_set (struct hurd_port *port, mach_port_t newport);
 +
-+#if defined __USE_EXTERN_INLINES && defined _LIBC
++#if defined __USE_EXTERN_INLINES && defined _LIBC && !defined NOT_IN_libc
  _HURD_PORT_H_EXTERN_INLINE void
  _hurd_port_set (struct hurd_port *port, mach_port_t newport)
  {
@@ -231,17 +231,17 @@ glibc-2.8/debian/patches/hurd-i386/submitted-extern_inline.diff 3057
  #endif	/* hurd/port.h */
 --- a/hurd/hurd/signal.h
 +++ b/hurd/hurd/signal.h
-@@ -129,6 +129,7 @@ extern struct hurd_sigstate *_hurd_self_
+@@ -129,13 +129,15 @@ extern struct hurd_sigstate *_hurd_self_
+ #define _HURD_SIGNAL_H_EXTERN_INLINE __extern_inline
  #endif
  
- extern __thread struct hurd_sigstate *_hurd_sigstate;
-+#if defined __USE_EXTERN_INLINES && defined _LIBC
++#if defined __USE_EXTERN_INLINES && defined _LIBC && !defined NOT_IN_libc
  _HURD_SIGNAL_H_EXTERN_INLINE struct hurd_sigstate *
  _hurd_self_sigstate (void)
  {
-@@ -136,6 +137,7 @@ _hurd_self_sigstate (void)
-     _hurd_sigstate = _hurd_thread_sigstate (__mach_thread_self ());
-   return _hurd_sigstate;
+   if (THREAD_SELF->_hurd_sigstate == NULL)
+     THREAD_SELF->_hurd_sigstate = _hurd_thread_sigstate (__mach_thread_self ());
+   return THREAD_SELF->_hurd_sigstate;
  }
 +#endif
  
@@ -253,7 +253,7 @@ glibc-2.8/debian/patches/hurd-i386/submitted-extern_inline.diff 3057
  
 +void *_hurd_critical_section_lock (void);
 +
-+#if defined __USE_EXTERN_INLINES && defined _LIBC
++#if defined __USE_EXTERN_INLINES && defined _LIBC && !defined NOT_IN_libc
  _HURD_SIGNAL_H_EXTERN_INLINE void *
  _hurd_critical_section_lock (void)
  {
@@ -265,7 +265,7 @@ glibc-2.8/debian/patches/hurd-i386/submitted-extern_inline.diff 3057
  
 +void _hurd_critical_section_unlock (void *our_lock);
 +
-+#if defined __USE_EXTERN_INLINES && defined _LIBC
++#if defined __USE_EXTERN_INLINES && defined _LIBC && !defined NOT_IN_libc
  _HURD_SIGNAL_H_EXTERN_INLINE void
  _hurd_critical_section_unlock (void *our_lock)
  {
@@ -296,7 +296,7 @@ glibc-2.8/debian/patches/hurd-i386/submitted-extern_inline.diff 3057
 +_hurd_userlink_link (struct hurd_userlink **chainp,
 +		     struct hurd_userlink *link);
 +
-+#if defined __USE_EXTERN_INLINES && defined _LIBC
++#if defined __USE_EXTERN_INLINES && defined _LIBC && !defined NOT_IN_libc
  _HURD_USERLINK_H_EXTERN_INLINE void
  _hurd_userlink_link (struct hurd_userlink **chainp,
  		     struct hurd_userlink *link)
@@ -312,7 +312,7 @@ glibc-2.8/debian/patches/hurd-i386/submitted-extern_inline.diff 3057
  
 +int _hurd_userlink_unlink (struct hurd_userlink *link);
 +
-+#if defined __USE_EXTERN_INLINES && defined _LIBC
++#if defined __USE_EXTERN_INLINES && defined _LIBC && !defined NOT_IN_libc
  _HURD_USERLINK_H_EXTERN_INLINE int
  _hurd_userlink_unlink (struct hurd_userlink *link)
  {
@@ -330,7 +330,7 @@ glibc-2.8/debian/patches/hurd-i386/submitted-extern_inline.diff 3057
  
 +int _hurd_userlink_clear (struct hurd_userlink **chainp);
 +
-+#if defined __USE_EXTERN_INLINES && defined _LIBC
++#if defined __USE_EXTERN_INLINES && defined _LIBC && !defined NOT_IN_libc
  _HURD_USERLINK_H_EXTERN_INLINE int
  _hurd_userlink_clear (struct hurd_userlink **chainp)
  {
