@@ -23,7 +23,7 @@ sigstate.
  	 possible already be set.  Look up our sigstate structure the slow
 -	 way; this locks the sigstate lock.  */
 +	 way.  */
-       ss = _hurd_sigstate = _hurd_thread_sigstate (__mach_thread_self ());
+       ss = THREAD_SELF->_hurd_sigstate = _hurd_thread_sigstate (__mach_thread_self ());
 -      __spin_unlock (&ss->lock);
      }
  
