@@ -43,18 +43,18 @@ calling _hurd_thread_sigstate.
 @@ -160,7 +164,11 @@ _HURD_SIGNAL_H_EXTERN_INLINE struct hurd
  _hurd_self_sigstate (void)
  {
-   if (_hurd_sigstate == NULL)
--    _hurd_sigstate = _hurd_thread_sigstate (__mach_thread_self ());
+   if (THREAD_SELF->_hurd_sigstate == NULL)
+-    THREAD_SELF->_hurd_sigstate = _hurd_thread_sigstate (__mach_thread_self ());
 +    {
 +      thread_t self = __mach_thread_self ();
-+      _hurd_sigstate = _hurd_thread_sigstate (self);
++      THREAD_SELF->_hurd_sigstate = _hurd_thread_sigstate (self);
 +      __mach_port_deallocate (__mach_task_self (), self);
 +    }
-   return _hurd_sigstate;
+   return THREAD_SELF->_hurd_sigstate;
  }
  #endif
 @@ -201,11 +209,14 @@ _hurd_critical_section_lock (void)
-   ss = _hurd_sigstate;
+   ss = THREAD_SELF->_hurd_sigstate;
    if (ss == NULL)
      {
 +      thread_t self = __mach_thread_self ();
@@ -63,8 +63,8 @@ calling _hurd_thread_sigstate.
  	 asked for it.  In this case, the critical section flag cannot
  	 possible already be set.  Look up our sigstate structure the slow
  	 way.  */
--      ss = _hurd_sigstate = _hurd_thread_sigstate (__mach_thread_self ());
-+      ss = _hurd_sigstate = _hurd_thread_sigstate (self);
+-      ss = THREAD_SELF->_hurd_sigstate = _hurd_thread_sigstate (__mach_thread_self ());
++      ss = THREAD_SELF->_hurd_sigstate = _hurd_thread_sigstate (self);
 +      __mach_port_deallocate (__mach_task_self (), self);
      }
  
