@@ -90,6 +90,11 @@ eglibc (2.18-5) UNRELEASED; urgency=medium
     initialization.
   * patches/hurd-i386/cvs-tcbhead_t.diff: New patch to complete TLS variables,
     to fix gcc's -fsplit-stack support.
+  * patches/hurd-i386/tg-extern_inline.diff: Only inline within libc.
+  * patches/hurd-i386/tg-tls-threadvar.diff: Use tcbhead_t for _hurd_sigstate
+    instead of TLS variable. Fixes some corner cases triggered with gcl.
+  * patches/hurd-i386/tg-sigstate_locking.diff: Refresh.
+  * patches/hurd-i386/tg-sigstate_thread_reference.diff: Refresh.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 02 Mar 2014 16:19:49 +0100
 
